src/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Detail__c</fullName>
        <label>Event Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Event_Organizer__c</fullName>
        <label>Event Organizer</label>
        <referenceTo>Event_Organizer__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-Person</fullName>
                </value>
                <value>
                    <fullName>Virtual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Live__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Live?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Verified__c</fullName>
        <formula>Location__r.Verified__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Events</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Max_Seats__c</fullName>
        <label>Max Seats</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PeopleAttending__c</fullName>
        <label># People Attending</label>
        <summaryForeignKey>Event_Attendee__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recurring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remaining_Seats__c</fullName>
        <formula>Max_Seats__c -  PeopleAttending__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <label>Start Date/Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>This field tracks the Status of the Event Record</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                    <default>true</default>
                    <label>Created</label>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Post Poned</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Live__c</columns>
        <columns>Event_Organizer__c</columns>
        <columns>Start_DateTime__c</columns>
        <columns>End_Date_Time__c</columns>
        <columns>Location__c</columns>
        <columns>Recurring__c</columns>
        <columns>PeopleAttending__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EVT - {000000}</displayFormat>
        <label>Event #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>End_Date_must_be_Greater_than_Start_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
   NOT ISBLANK (  End_Date_Time__c  ),
   End_Date_Time__c &lt;=  (Start_DateTime__c + 1)
)</errorConditionFormula>
        <errorDisplayField>End_Date_Time__c</errorDisplayField>
        <errorMessage>End Date must be  greater than Start Date/Time</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Need_to_Select_Location_If_not_Virt</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   TEXT (  Event_Type__c  ) = &apos;Virtual&apos;,
   NOT ISBLANK (  Location__c )
)</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>You can not Select the Location if the Event is Virtual</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Must_Select_Frequency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    Recurring__c ,
    ISBLANK( TEXT( Frequency__c ) )
)</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>You must need to Select Frequency field for Recurring events</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Please_select_a_location_for_InPerson</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
   TEXT (  Event_Type__c  ) != &apos;Virtual&apos;,
   ISBLANK (  Location__c )
)</errorConditionFormula>
        <errorDisplayField>Location__c</errorDisplayField>
        <errorMessage>Please select a location for In-Person Event</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>You_can_Select_Frequency</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
     NOT Recurring__c ,
     NOT ISBLANK( TEXT ( Frequency__c ) ) 
)</errorConditionFormula>
        <errorDisplayField>Frequency__c</errorDisplayField>
        <errorMessage>You can Select Frequency for Non-Recurring Events</errorMessage>
    </validationRules>
</CustomObject>